old_tests/tests/lean/escape_id.lean.expected.out
«def» : ℕ
def.equations._eqn_1 : «def» = 1
«[ ]» : ℕ
escape_id.lean:7:7: error: unknown identifier '«[»'
a.«b.c» : ℕ
escape_id.lean:11:7: error: unknown identifier 'a.b.c'
escape_id.lean:12:7: error: unknown identifier '«a.b.c»'
list.length [1] : ℕ
escape_id.lean:16:8: error: illegal character in escaped identifier
escape_id.lean:17:0: error: invalid expression, unexpected token
escape_id.lean:17:8: error: illegal character in escaped identifier
escape_id.lean:18:0: error: unexpected token
escape_id.lean:18:1: error: invalid expression, unexpected token
