old_tests/tests/lean/escape_id.lean
def «def» := 1
#check «def»
#check def.equations._eqn_1

def «[ ]» := 1
#check «[ ]»
#check «[»

def a.«b.c» := 1
#check a.«b.c»
#check a.b.c
#check «a.b.c»

#check [1].«length»

#check ««»
#check «
»
